tests/NormalTests/paczka1/fuzzy1/47347561.err
Error in line 2: lq7kBPqjF A0 19,9
Error in line 1: lq7kBPqjF A392 72,1
Error in line 5: lq7kBPqjF A0 63,8
Error in line 6: qT4 A0 83,1
Error in line 7: qT4 A0 163,7
Error in line 8: lq7kBPqjF A392 52,85
Error in line 11: lq7kBPqjF A581 28,1
Error in line 12: lq7kBPqjF S444 56,0
Error in line 19: oYkS75jd8 A0 25,7
Error in line 20: kjbPTrMc3 A0 53,5
Error in line 22: kjbPTrMc3 A0 51,4
Error in line 24: oYkS75jd8 A0 72,8
Error in line 25: oYkS75jd8 A0 284,6
Error in line 16: A392 S444 84,6
Error in line 27: eG9hwk0 A581 87,6
Error in line 31: ?A0
Error in line 28: A392 A581 44,5
Error in line 33: A392 A392 73,1
Error in line 34: A392 A581 88,3
